# langchain-fastapi-production

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHATBOT_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_GUIDE.md  LOGGER_EXAMPLES.md  MCP_INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  WARP.md  alembic.ini  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  test_endpoints.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  default.yml
.github/prompts/: .prompt.md
.github/workflows/: docker-build-push.yml  greetings.yml  test.yml
.kiro/steering/: python-fastapi-langchain-standards.md
caddy/: Caddyfile.http  Caddyfile.https
docker/: dev.Dockerfile  prod.Dockerfile
docs/instructions/: codacy.instructions.md
scripts/: dev.bat  docker.sh
src/: main.py
src/alembic/: env.py
src/api/: router.py
src/api/endpoints/: chat.py  crawl.py  documents.py  rag.py  workflows.py
src/api/middleware/: correlation_id.py  error_handler.py  logging_middleware.py  rate_limiter.py
src/app/: main.py
src/app/connections/: mongodb.py  pinecone.py  postgres.py  redis.py
src/app/core/: cache.py  decorators.py  exceptions.py  lifespan.py  settings.py  signals.py
src/app/db/: mongodb.py  pinecone.py  postgres.py
src/app/features/health/: controller.py  router.py
src/app/middleware/: global_exception_handler.py  security.py  server_middleware.py  timeout.py
src/app/shared/: enums.py
src/app/shared/agents/memory/: mem0_client.py
src/app/shared/langchain/: models.py
src/app/shared/langsmith/: client.py
src/app/utils/: apiFeatures.py  exceptions.py  httpError.py  httpResponse.py  logger.py  logging.py  quicker.py  uvicorn_logger.py
src/core/config/: logging_config.py  settings.py
src/core/database/: mongodb.py
src/core/langchain/: models.py
src/features/chat/api/: routes.py  schemas.py
src/features/chat/models/: chat.py
src/features/chat/repositories/: chat_repository.py
src/features/chat/services/: chat_service.py
src/features/crawl/api/: routes.py  schemas.py
src/features/crawl/repositories/: crawl_repository.py
src/features/crawl/services/: crawl_service.py
src/features/documents/api/: routes.py  schemas.py
src/features/documents/repositories/: document_repository.py
src/features/documents/services/: document_service.py
src/features/rag/api/: routes.py  schemas.py
src/features/rag/repositories/: document_repository.py  vector_repository.py
src/features/rag/services/: rag_service.py
src/features/workflows/api/: routes.py  schemas.py
src/features/workflows/services/: workflow_service.py
src/graphs/workflows/: rag_workflow.py
src/services/content_intelligence/: unified_processor.py
src/services/crawl4ai/: crawler.py
src/services/docling/: processor.py
src/services/document_intelligence/: advanced_processor.py
src/services/langchain/: gemini_service.py
src/services/langsmith/: client.py
src/services/pinecone/: client.py
src/services/web_intelligence/: smart_scraper.py
src/shared/constants/: enums.py
src/shared/schemas/: base.py  response.py
src/shared/utils/: datetime.py  id_generator.py
tests/performance/: CHATBOT_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_WITH_SNIPPETS.md  MCP_INTEGRATION_GUIDE.md  todo.md
